# StyleSynth-

./: .gitignore  LICENSE  README.md  demo_review_generator.py  pyproject.toml  pytest.ini  ruff.toml  simple_usage.py
.github/workflows/: ci-cd.yml
src/review_analyzer/: __init__.py  analyzer.py  config.py  generator.py  llm.py  schemas.py  vector_store.py
tests/: conftest.py  test_analyzer.py  test_schemas.py  test_vector_store.py
